--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,21 @@
+@import url(https://fonts.googleapis.com/css?family=Work+Sans:400,200,700,500);
+
 #imgThumbnail {
     height: 100px;
+
 }
 
+.thumbnail {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+.thumbnail:hover {
+    background: #f5f5f5;
+    transform: scale(1.1, 1.1);
+    opacity: 1;
+}
+a {
+    text-decoration: none !important;
+}
 #imgUser {
     height: 100px;
 }
@@ -18,16 +32,22 @@
     min-height: 550px;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Work+Sans:400,200,700,500);
-
-
+.fa-arrow-left, .fa-arrow-right{
+    width: 40px;
+}
 
 .glyphicon-arrow-left {
     font-size: 75px;
 }
+.glyphicon-envelope, .fa-github {
+    font-size: 25px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
 
 #container{
-    margin-top: 20px;   
+    margin-top: 20px;
+
 }
 .user-image {
   /*background: url('https://dl.dropboxusercontent.com/s/qxmegzcf52nv2mt/person-woman-coffee-cup.jpg');*/
@@ -68,19 +88,22 @@
 
 
 .user-info {
-  height: 17%;
+  height: 14%;
 }
-
+.pages {
+    width: 100px;
+    text-align: center;
+}
 .quote {
   padding-left: 25px;
   padding-right: 25px;
   box-sizing: border-box;
   font-weight: 300;
-  padding-top: 28px;
+  padding-top: 10px;
   text-align: center;
 }
 
-.social-info {
+.repo-info {
   width: 100%;
   height: 13%;
   padding-bottom: 15px;
@@ -95,12 +118,7 @@
   justify-content: center;
 }
 
-.lg {
-  font-size: 28px;
-  font-size: 1.8rem;
-}
-
-.social-info-elm {
+.repo-info-elm {
   color: #999;
   border-right: 1px solid #eee;
   width: 33.3333%;
@@ -108,8 +126,41 @@
   font-weight: 300;
 }
 
-.social-info-elm:last-child {
+.repo-info-elm:last-child {
   border-right: none;
+}
+
+.repo-count {
+  width: 100%;
+  height: 13%;
+  margin-top: -15px;
+  padding-bottom: 15px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  box-sizing: border-box;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.repo-count-elm {
+  color: #999;
+  border-right: 1px solid #eee;
+  width: 33.3333%;
+  text-align: center;
+  font-weight: 300;
+}
+
+.repo-count-elm:last-child {
+  border-right: none;
+}
+
+.lg {
+  font-size: 28px;
+  font-size: 1.8rem;
 }
 
 .card-wrapper {
@@ -120,7 +171,7 @@
 
 .main-window {
   background: #fff;
-  height: 100%;
+  height: 110%;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   width: 100%;
   position: relative;
