--- a/assets/views/index.html
+++ b/assets/views/index.html
@@ -1,78 +1,49 @@
 <div class="row">
-  <div class="col-md-2 col-md-offset-5">
-    <form class="navbar-form" ng-submit="users.searchUsers()" novalidate>
+  <div class="  col-md-3 col-md-offset-5 col-sm-offset-4">
+    <form class="navbar-form" ng-submit="users.searchUsers()" name="myForm" novalidate>
       <div class="input-group add-on">
-        <input class="form-control" placeholder="Search" name="srch-term" id="srch-term" type="text" ng-model="users.userQuery">
+        <input class="form-control" placeholder="Search" name="myInput" id="srch-term" type="text" ng-model="users.userQuery" required>
         <div class="input-group-btn">
           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
         </div>
       </div>
     </form>
+    <span ng-show="users.alert">
+        <h1> {{users.alert}} </h1>
+    </span>
   </div>
 </div>
 
-
-<!-- <div>
-    <ul>
-        <li ng-repeat="user in users.all | startFrom:users.currentPage*users.pageSize | limitTo:users.pageSize" ng-click="users.getUser(user.login)" ui-sref="user">
-            {{ user.login }}
-            <img ng-src="{{ user.avatar_url }}" height="50px" width="50px">
-        </li>
-    </ul>
-</div> -->
-
-
 <div class="row">
   <div class="container users-container">
+    <a href="#" ng-click="users.getUser(user.login)" ui-sref="user">
       <div class="col-xs-18 col-sm-6 col-md-3" ng-repeat="user in users.all | startFrom:users.currentPage*users.pageSize | limitTo:users.pageSize">
+        <a href="#" ng-click="users.getUser(user.login)" ui-sref="user">
           <div class="thumbnail">
               <img ng-src="{{ user.avatar_url }}/150x150/EEE" id="imgThumbnail">
              <!--  src="http://placehold.it/500x250/EEE" -->
               <div class="caption">
-                  <a href="#" ng-click="users.getUser(user.login)" ui-sref="user"><h5>{{ user.login }}</h5></a>  
+                  <h5>{{ user.login }}</h5>
               </div>
           </div>
+        </a>
       </div>
+    
   </div>
+
 </div>
-
-
 
 <div class="row">
-  <div class="col-md-2 col-md-offset-5" ng-show="users.totalPages > 0">
+  <div class="col-md-3 col-md-offset-5" ng-show="users.totalPages > 0">
       <button ng-disabled="users.currentPage == 0" ng-click="users.currentPage=users.currentPage-1">
-          Previous
+          <i class="fa fa-arrow-left" aria-hidden="true"></i>
       </button>
-      {{users.currentPage+1}}/{{users.totalPages}}
+      <label class="pages">Page {{users.currentPage+1}} of {{users.totalPages}}</label>
       <button ng-disabled="users.currentPage == users.totalPages-1" ng-click="users.currentPage=users.currentPage+1">
-          Next
+          <i class="fa fa-arrow-right" aria-hidden="true"></i>
       </button>
-
+      <button ng-show="users.currentUsersCount < users.usersCount && users.currentPage == users.totalPages-1" ng-click="users.getMoreUsers(users.currentUsers)">
+          <span class="glyphicon glyphicon-plus"></span>
+      </button>
   </div>
 </div>
-<!-- <form ng-submit="users.searchUsers()" novalidate>
-      <input type="text" ng-model="users.userQuery"> 
-      <button type="submit">Search</button>
-
-
-<div>
-  <h3> {{ users.alert }} </h3>
-</div>
-
-<div>
-    <ul>
-        <li ng-repeat="user in users.all | startFrom:users.currentPage*users.pageSize | limitTo:users.pageSize" ng-click="users.getUser(user.login)" ui-sref="user">
-            {{ user.login }}
-            <img ng-src="{{ user.avatar_url }}" height="50px" width="50px">
-        </li>
-    </ul>
-</div>
-<div ng-show="users.totalPages > 0">
-  <button ng-disabled="users.currentPage == 0" ng-click="users.currentPage=users.currentPage-1">
-      Previous
-  </button>
-  {{users.currentPage+1}}/{{users.totalPages}}
-  <button ng-disabled="users.currentPage == users.totalPages-1" ng-click="users.currentPage=users.currentPage+1">
-      Next
-  </button>
-</div> -->
