--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,13 @@
     height: 100px;
 
 }
-
 .thumbnail {
+    transition: all .8s ease;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 .thumbnail:hover {
     background: #f5f5f5;
+ 
     transform: scale(1.1, 1.1);
     opacity: 1;
 }
